ajout listes ingrédients et étapes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,25 @@
     <p><h1>Lasagne de Lisa</h1></p>
     <p>C'est une recette de lasagne facile que tout le monde peut faire !</p>
     <img src="../recipes/img/lasagne.jpeg"alt="lasagne">
-
+    <P><h2>Ingrédients</h2></P>
+    <p><ul>
+        <li>1 livre de bœuf haché maigre</li>
+        <li>1 oignon, haché</li>
+        <li>1 poivron vert, haché</li>
+        <li>1 cuillère à café d'assaisonnement italien</li>
+        <li>sel et poivre au goût</li>
+        <li>2 boîtes (6 onces) de pâte de tomate</li>
+        <li>1 pinte de fromage ricotta partiellement écrémé</li>
+        <li>2 tasses de fromage mozzarella râpé</li>
+        <li>8 pâtes à lasagne, cuites et égouttées</li>
+    </ul></p>
+    <p><h2>Les étapes</h2></p>
+    <p><ol>
+        <li>Faire dorer la viande avec les oignons et les poivrons et assaisonner au goût. Ajouter la pâte de tomate et l'eau. Laissez mijoter.</li>
+        <li>Dans un saladier, mélangez la ricotta avec l'œuf battu. Mettre de côté.</li>
+        <li>Préchauffer le four à 370 degrés F (190 degrés C). Beurrer un plat allant au four de 9 x 13 pouces.</li>
+        <li>Commencez à superposer tous les ingrédients en commençant par quelques cuillerées de sauce tomate. Suivez avec les nouilles, puis le mélange de ricotta et la mozzarella râpée. Répétez jusqu'à ce que le plat soit rempli.</li>
+        <li>Cuire au four à 375 degrés F (190 degrés C) environ 35 à 45 minutes, jusqu'à ce que le tout bouillonne. Laisser refroidir quelques minutes avant de couper.</li>
+    </ol></p>
 </body>
 </html>
