--- a/recipes/moussaca.html
+++ b/recipes/moussaca.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna's recipe</title>
+    <title>moussaca's recipe</title>
 </head>
 <body>
-    <p><h1>Lasagne de Lisa</h1></p>
-    <p>C'est une recette de lasagne facile que tout le monde peut faire !</p>
-    <img src="../recipes/img/lasagne.jpeg"alt="lasagne">
+    <p><h1>Moussaca de Katia</h1></p>
+    <p>C'est une recette de moussaca facile que tout le monde peut faire !</p>
+    <img src="../recipes/img/moussaka.png"alt="moussaca">
     <P><h2>Ingrédients</h2></P>
     <p><ul>
         <li>1 livre de bœuf haché maigre</li>
@@ -31,8 +31,8 @@
         <li>Cuire au four à 375 degrés F (190 degrés C) environ 35 à 45 minutes, jusqu'à ce que le tout bouillonne. Laisser refroidir quelques minutes avant de couper.</li>
     </ol></p>
     <p><ul> 
-        <li><a href="file:///home/christophe/odin-recipes/recipes/moussaca.html">découvre également la recete des moussaca de Katia</a></li>
-        <li><a href="file:///home/christophe/odin-recipes/recipes/bolognese.html">découvre également la recete des bolognese de Elise</a></li>
-    </ul></p>
+    <li><a href="file:///home/christophe/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
+    <li><a href="file:///home/christophe/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
+</ul></p>
 </body>
 </html>
