correction destinations des liens

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin's recipes</h1>
     <p><ul> 
-        <li><a href="file:///home/christophe/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
-        <li><a href="file:///home/christophe/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
-        <li><a href="file:///home/christophe/odin-recipes/recipes/moussaca.html">découvre également la recete des Moussaca de Katia</a></li>
+        <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
+        <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
+        <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/moussaca.html">découvre également la recete des Moussaca de Katia</a></li>
     </ul></p>
 </body>
 </html>
