--- a/recipes/moussaca.html
+++ b/recipes/moussaca.html
@@ -31,8 +31,8 @@
         <li>Cuire au four à 375 degrés F (190 degrés C) environ 35 à 45 minutes, jusqu'à ce que le tout bouillonne. Laisser refroidir quelques minutes avant de couper.</li>
     </ol></p>
     <p><ul> 
-    <li><a href="file:///home/christophe/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
-    <li><a href="file:///home/christophe/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
+    <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
+    <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
 </ul></p>
 </body>
 </html>
