--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>recetes d'Odin</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <h1>Odin's recipes</h1>
-    <p><ul> 
+    <div class="images">
+        <img src="./recipes/img/spaghetti-bolognese.jpg"alt="bolognese"> 
+        <img src="./recipes/img/lasagne.jpeg"alt="lasagne">
+        <img src="./recipes/img/moussaka.png"alt="moussaca">
+    </div>
+
+   <p>
+        <ul> 
         <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/lasagna.html">découvre également la recete des lasagne de Lisa</a></li>
         <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/bolognese.html">découvre également la recete des Bolognese de Elise</a></li>
         <li><a href="https://chryptoufff.github.io/odin-recipes/recipes/moussaca.html">découvre également la recete des Moussaca de Katia</a></li>
